--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_app_badger
 description: Plugin to update the app badge on the launcher (both for Android, iOS and macOS)
-version: 1.5.0
+version: 1.5.1
 homepage: https://github.com/g123k/flutter_app_badger
 
 dependencies:
@@ -20,5 +20,5 @@ flutter:
 
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.10.0"
+  sdk: ">=3.6.0 <4.0.0"
+  flutter: ">=3.29.3"
